src/styles/adaptive.less
/* ... */
@media screen and (max-width: 474px) {
  .hero {
    padding-bottom: 79px;

    &__container {
      column-gap: 0;
    }

    &__description {
      font-size: 20px;
      line-height: 1.08;
      margin: 78px 53px 0 56px;
    }

    &__play-action {
      grid-column: 1 / span 12;
      margin: 28px 0 0 -4px;
    }

    &__curve {
      transform: scaleX(0.75);
      top: 111px;
      left: -21px;
    }

    &__details {
      min-width: min(320px, 100vw);
    }

    &__detail-item {
      &:nth-of-type(1) {
        top: 101px;
        left: 16px;
      }

      &:nth-of-type(2) {
        top: -57px;
        left: 79px;
      }

      &:nth-of-type(3) {
        top: -104px;
        left: 238px;
        line-height: 1.185;
      }
    }
  }

  .about {
    padding-top: 80px;
    padding-bottom: 40px;

    &__title {
      font-size: 25px;
      justify-self: start;
      margin-left: 0;
      margin-bottom: 46px;
    }

    &__text {
      font-size: 14px;
      margin-left: 0;
      justify-self: start;
      line-height: 1.5;
    }

    &__media {
      padding: 40px 0 40px 26px;
      max-width: 232px;
    }

    &__image {
      max-width: 265px;
    }
  }

  .advantages {
    padding-top: 29px;
    padding-bottom: 61px;
    background-position-x: 64.5%;
    background-position-y: 46.5%;

    &__title {
      font-size: 25px;
      margin-left: 3px;
      margin-bottom: 28px;
    }

    &__list {
      column-gap: 0;
      row-gap: 36px;
    }

    &__item {
      max-width: 234px;

      &::before {
        font-size: 25px;
        line-height: 1.88;
        width: 49px;
        height: 49px;
      }

      &:nth-of-type(2) {
        top: 15px;
      }

      &:nth-of-type(3) {
        top: 7px;
      }
    }

    &__item-title {
      margin-top: 8px;
      margin-bottom: 13px;
    }
  }

  .places {
    padding-bottom: 80px;

    &__title {
      font-size: 25px;
      line-height: 1.2;
      margin-bottom: 14px;
    }

    &__info-title {
      margin-top: 36px;
      margin-bottom: 33px;
    }

    &__info-text {
      font-size: 14px;
      line-height: 1.5;
    }

    &__info-media {
      margin-top: 41px;
      padding: 21px 0 21px;
      max-width: min(217px, 100vw);
      height: unset;
    }

    &__info-image {
      top: 0;
      left: -73px;

      width: unset;
      max-width: min(237px, 100vw);
    }

    &__map-name {
      font-family: "Corinthia", cursive;
      top: 48.5%;
      left: 51.6%;
    }

    &__map-path {
      top: 36.8%;
      left: 15.4%;
      scale: 0.8;
    }

    &__map-path-item {
      width: 23px;
      height: 23px;
      font-size: 12px;

      &:nth-of-type(1) {
        top: 38.8%;
        left: 15%;
      }

      &:nth-of-type(2) {
        top: 57%;
        left: 26%;
      }

      &:nth-of-type(3) {
        top: 68%;
        left: 19.2%;
      }

      &:nth-of-type(4) {
        top: 81%;
        left: 22%;
      }

      &:nth-of-type(5) {
        top: 81.7%;
        left: 38.2%;
      }

      &_active {
        width: 26px;
        height: 26px;
        font-size: 14px;
      }
    }
  }

  .video {
    &__container {
      position: relative;
      min-height: 222px;
      background-size: 227vw;
      background-position-x: calc((506px - 227vw) / 2.27);
      background-position-y: calc((355px - 227vw) / 2.27);
    }

    &__player {
      min-height: 222px;
    }

    &__play-action {
      top: calc(100% / 2 - 33px);
      left: calc(100% / 2 - 102px);
    }

    &__play-btn {

      top: calc(100% / 2 - 23px);
      left: calc(100% / 2 - 102px);
    }
  }

  .play-btn {
    &__info_big {
      font-size: 13px;
      top: -27px;
      line-height: 1.462;
      max-width: 200px;
    }

    &_big {
      gap: 11px;
    }
  }

  .program {
    padding-top: 53px;
    padding-bottom: 32px;

    &__title {
      font-size: 25px;
      text-align: left;
      margin-bottom: 38px;
    }

    &__tour {
      column-gap: 0;
    }

    &__tour-media {
      grid-column: 1 / span 12;
    }

    &__tour-day {
      grid-column: 1 / span 12;
      font-size: 20px;
    }

    &__tour-title {
      grid-column: 1 / span 12;
      margin-top: 14px;
      margin-bottom: 23px;

      line-height: 1.25;
    }

    &__tour-text {
      grid-column: 1 / span 12;
      font-size: 14px;
      margin-top: 19px;

      line-height: 1.5;
    }

    .program__actions {
      grid-column: 1 / span 12;
      margin-bottom: 23px;
    }

    .program__download-link {
      grid-column: 1 / span 12;
    }
  }

  .reviews {
    padding-top: 24px;
    padding-bottom: 20px;

    &__title {
      font-size: 25px;
    }
  }

  .review-card {
    padding: 13px 16px 41px 15px;
    column-gap: 0;

    &__rating {
      margin-top: 26px;
      margin-bottom: 11px;
    }

    &__text {
      font-size: 14px;
      line-height: 1.5;
    }

    &__media {
      grid-column: 1 / span 12;
      padding-top: 7px;
    }

    &__actions {
      margin-top: 67px;
    }
  }

  .gallery {
    padding-top: 34px;
    padding-bottom: 82px;

    &__title {
      font-size: 25px;
      margin-bottom: 39px;
    }

    &__slider {
      column-gap: 0;
      min-height: unset;
    }
  }

  .order {
    padding-top: 14px;
    min-height: 505px;
    background-position-x: -519px;
    background-position-y: 2px;
    background-size: 458vw;

    &__title {
      font-size: 25px;
      line-height: 1.2;
      margin-bottom: 4px;
    }

    &__form {
      padding: 0 15px;
      gap: 21px;
    }

    &__form-text {
      margin-bottom: 20px;
    }

    &__form-radio {
      height: 30px;
      width: 30px;
      font-size: 17px;
      line-height: 1;
    }
  }

  .footer {
    padding-top: 40px;

    &__container {
      gap: 26px;
    }

    &__tel {
      line-height: 0.3;
    }
  }

  .socials {
    gap: 22px;
  }

  .social {
    width: 40px;
    height: 40px;
  }
}
/* ... */

